; ModuleID = '/home/carl/AnghaBench/netdata/database/extr_rrd.c_rrd_algorithm_name.c'
source_filename = "/home/carl/AnghaBench/netdata/database/extr_rrd.c_rrd_algorithm_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RRD_ALGORITHM_ABSOLUTE_NAME = common dso_local global i8* null, align 8
@RRD_ALGORITHM_INCREMENTAL_NAME = common dso_local global i8* null, align 8
@RRD_ALGORITHM_PCENT_OVER_ROW_TOTAL_NAME = common dso_local global i8* null, align 8
@RRD_ALGORITHM_PCENT_OVER_DIFF_TOTAL_NAME = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @rrd_algorithm_name(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %6 [
    i32 131, label %5
    i32 130, label %8
    i32 128, label %10
    i32 129, label %12
  ]

5:                                                ; preds = %1
  br label %6

6:                                                ; preds = %1, %5
  %7 = load i8*, i8** @RRD_ALGORITHM_ABSOLUTE_NAME, align 8
  store i8* %7, i8** %2, align 8
  br label %14

8:                                                ; preds = %1
  %9 = load i8*, i8** @RRD_ALGORITHM_INCREMENTAL_NAME, align 8
  store i8* %9, i8** %2, align 8
  br label %14

10:                                               ; preds = %1
  %11 = load i8*, i8** @RRD_ALGORITHM_PCENT_OVER_ROW_TOTAL_NAME, align 8
  store i8* %11, i8** %2, align 8
  br label %14

12:                                               ; preds = %1
  %13 = load i8*, i8** @RRD_ALGORITHM_PCENT_OVER_DIFF_TOTAL_NAME, align 8
  store i8* %13, i8** %2, align 8
  br label %14

14:                                               ; preds = %12, %10, %8, %6
  %15 = load i8*, i8** %2, align 8
  ret i8* %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
